Set button anchor text alignment to left to fix jvm, web server, web application and group configuration name column alignment issues.

--- a/aem-webapp/src/main/webapp/resources/css/react/generic-components/default/anchor.css
+++ b/aem-webapp/src/main/webapp/resources/css/react/generic-components/default/anchor.css
@@ -1,4 +1,5 @@
 .button-link {
+    text-align:left;
     background:none!important;
      border:none;
      padding:0!important;
